--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="statementButton">Statement</string>
     <string name="lockButton">Lock</string>
     <string name="renameButton">Rename</string>
+    <string name="renamePopUp">Change Account Name:</string>
 
 
 </resources>
