--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,8 @@
     <string name="renamePopUp">Change Account Name:</string>
     <string name="icons8Credits">Taskbar icons from ICONS8: https://icons8.com</string>
     <string name="flaticonCredits">Lock icons made by Those Icons from www.flaticon.com</string>
+    <string name="yourAccounts">Your Accounts:</string>
+    <string name="newAccountButton">+New Account</string>
 
 
 </resources>
