Transferring to Others and own accounts split into different activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="or_transfer_between_your_own_accounts">Or, transfer between your own accounts:</string>
     <string name="from">From</string>
     <string name="to">To</string>
+    <string name="Transfer_between_your_own_accounts" />
 
 
 </resources>
