Overhauled the layout of the account page. Copied it to create the vault page which will be edited.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="prompt_accountName">Account Name</string>
     <string name="backButton">Back</string>
     <string name="createButton">Create Account</string>
+    <string name="transactions">Transactions</string>
 
 
 </resources>
