--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="flaticonCredits">Lock icons made by Those Icons from www.flaticon.com</string>
     <string name="yourAccounts">Your Account:</string>
     <string name="newAccountButton">+New Vault</string>
-    <string name="newAccountPopup">Name your new account:</string>
+    <string name="newAccountPopup">Name your new vault:</string>
     <string name="prompt_accountName">Account Name</string>
     <string name="backButton">Back</string>
     <string name="createButton">Create Account</string>
