--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,9 @@
     <string name="homescreen">home_screen</string>
     <string name="image_of_card" />
     <string name="analytics" />
+    <string name="add_card">Add Card</string>
+    <string name="confirm">Confirm</string>
+    <string name="please_choose_a_4_digit_pin">Please choose a 4-digit PIN</string>
 
 
 </resources>
