--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="from">From</string>
     <string name="to">To</string>
     <string name="Transfer_between_your_own_accounts" />
+    <string name="title_activity_new_recipient_tabbed">NewRecipientTabbed</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 
 
 </resources>
