--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,12 @@
     <string name="add_card">Add Card</string>
     <string name="confirm">Confirm</string>
     <string name="please_choose_a_4_digit_pin">Please choose a 4-digit PIN</string>
+    <string name="or_transfer_between_your_own_accounts">Or, transfer between your own accounts:</string>
+    <string name="from">From</string>
+    <string name="to">To</string>
+    <string name="Transfer_between_your_own_accounts" />
+    <string name="title_activity_new_recipient_tabbed">NewRecipientTabbed</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
 
 </resources>
