--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,5 +87,7 @@
     <string name="title_activity_new_recipient_tabbed">NewRecipientTabbed</string>
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
+    <string name="pin">PIN</string>
+    <string name="confirm_pin">Confirm PIN</string>
 
 </resources>
